# linuxMultimediaProgramming

./: README.md  linuxMultimedia.aux  linuxMultimedia.out  linuxMultimedia.tex  linuxMultimedia.toc
figs/: 1980sgraphicsStac.odg  graphicsStack.odg  graphicsStack.wmf  lab2.xcf  linuxaudiosystem-analysis.odg  linuxaudiosystem-studio.odg  linuxaudiosystem.odg
notes/: h264  mediaEditing.txt
snips/: gl_video_texture.cpp
snips/alsa/: audioout  audioout.c  audiooutbk.c
snips/augmentedReality/texture_video_AR/: CMakeLists.txt  ar.cpp  ar1.cpp  sdl1_ar.cpp
snips/cl/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  go  go.cpp
snips/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake
snips/geotif/: map.tif  plotGeoTif.py  testGDAL.py
snips/gl/: CMakeLists.txt  gl_sdl2.cpp
snips/gl/cube/: CMakeLists.txt  gl_sdl2_cube.cpp
snips/gl/texture/: CMakeLists.txt  t1.cpp  texture.cpp
snips/gl/triangle/: CMakeCache.txt  CMakeLists.txt  Makefile  (+2 more)
snips/gtk3/gtk3cairo/: CMakeLists.txt  gtk3cairo.c
snips/joystick/: testjoystick.c
snips/lilypond/: test.ly
snips/ogre/: BasicTutorial1.cpp  CMakeLists.txt
snips/openCVcppCMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  go  videoWrite  videoWrite.cpp
snips/openCVhello/: openCVhello.cpp
snips/pdfcut/: pdfcut_cmd
snips/postscript/: test.ps
snips/sdl2/: CMakeLists.txt  INSTALL  INSTALL_SDL  a.out  testSDL1.cpp  testSDL2.cpp
snips/sdlImageBlit/: a.out  lesson01.cpp
snips/sdl_gl/: Makefile  cmake_install.cmake  sdlgl  sdlgl.cpp
(+22 files in other folders)
